<resources>
    <string name="app_name">24CLUB</string>
    <string name="category_2">Category 2</string>
    <string name="category_1">Category 1</string>
    <string name="total_questions">Total Questions</string>
    <string name="ans_a">Ans A</string>
    <string name="ans_d">Ans D</string>
    <string name="ans_c">Ans C</string>
    <string name="ans_b">Ans B</string>
    <string name="winner_of_uefa_champions_league_2003">Winner of UEFA Champions League 2003</string>
    <string name="submit">Submit</string>
    <string name="newspaper">Newspaper</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="quiza">quiz</string>
    <string name="hello">Hello</string>
    <string name="thetext">"The sun rose slowly over the horizon, casting a warm glow across the tranquil countryside. Birds chirped merrily, heralding the arrival of a new day. In the distance, a gentle breeze rustled through the trees, carrying with it the sweet scent of blooming flowers. As the morning unfolded, people emerged from their homes, ready to embrace the opportunities that lay ahead. Each step forward was filled with anticipation and excitement, a testament to the endless possibilities of life. And amidst it all, the world seemed to pause, as if savoring the beauty of the present moment."</string>
    <string name="articles">Articles</string>
    <string name="article_title">Article Title</string>
    <string name="champions_league">Champions League</string>
    <string name="euro_2016">Euro 2016</string>
    <string name="eredivise">Eredivise</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="outback">Back</string>
    <string name="catback">Back</string>
    <string name="email">Email</string>
    <string name="euro">Euro</string>
    <string name="premier_league">Premier League</string>
    <string name="nickname">Nickname</string>
    <string name="user_1">User 1</string>
    <string name="user_2">User 2</string>
    <string name="user_3">User 3</string>
    <string name="user_4">User 4</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="backie">Back</string>
    <string name="play">Play</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="world_cup">World Cup</string>
</resources>