<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_question"
        android:text="@string/total_questions"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/question"
        android:textSize="20sp"
        android:layout_above="@id/choices_layout"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:text="@string/winner_of_uefa_champions_league_2003"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_a"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer2"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_b"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:id="@+id/answer3"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_c"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer4"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_d"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="40dp"/>
"




</RelativeLayout>