<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backvariant"
    tools:context=".Settings">
    <Button
        android:id="@+id/nick_btn"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:text="@string/nickname"
        android:textSize="30sp"
        android:fontFamily="@font/snessy"
        android:textColor="#FFFFFFFF"
        android:background="@drawable/rounded_button"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/nick"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:gravity="center"
        android:ems="10"
        android:fontFamily="@font/snessy"
        android:hint="@string/enter_your_nickname"
        android:textColor="#000000"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:text="@string/logout"
        android:fontFamily="@font/snessy"
        android:textSize="60sp"
        android:textColor="#FFFFFFFF"
        android:background="@drawable/rounded_button"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/setting_goback"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:text="@string/outback"
        android:textSize="60sp"
        android:textColor="#FFFFFFFF"
        android:fontFamily="@font/snessy"
        android:background="@drawable/rounded_button_dark"

        android:layout_margin="20dp"/>
</LinearLayout>