<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backvariant"
    tools:context=".Home">

    <Button
        android:id="@+id/quiz_btn"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:text="@string/play"
        android:textSize="60sp"
        android:fontFamily="@font/snessy"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFFFF"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/articles_btn"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:textSize="60sp"
        android:fontFamily="@font/snessy"
        android:text="@string/leaderboard"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFFFF"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/settings_btn"
        android:layout_width="match_parent"
        android:textSize="60sp"
        android:layout_height="170dp"
        android:text="@string/settings"
        android:textColor="#FFFFFFFF"
        android:fontFamily="@font/snessy"
        android:background="@drawable/rounded_button"
        android:layout_margin="20dp"/>



    <!-- Add more buttons as needed -->

</LinearLayout>
